--- a/small hi.css
+++ b/small hi.css
@@ -5,7 +5,7 @@ body {
 
 
 background-color:green;
-background-image:url("/storage/emulated/0/Shanu/Vandi prand/Bike/202206221935270.jpg");
+background-image:url("202206221935270.jpg");
 
 
 
